# remote-signer

./: .gitignore  Cargo.toml  README.md  build.rs
docker/dispatcher/: Dockerfile  docker-compose.yml
docker/dispatcher/config/: dispatcher_config.json
docker/dispatcher/nginx-conf/: grpc_proxy.conf  proxy.conf
docker/signer/: Dockerfile  docker-compose.yml
docker/signer/config/: mtls.toml  signer_config.json
proto/dispatcher/: dispatcher.proto
proto/signer/: signer.proto
src/: lib.rs
src/common/: config.rs
src/dispatcher/: client.rs  server.rs
src/signer/: client.rs  server.rs
