[package]
name = "remote-signer"
version = "0.1.0"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[[bin]]
name = "dispatcher-server"
path = "src/dispatcher/server.rs"

[[bin]]
name = "dispatcher-client"
path = "src/dispatcher/client.rs"

[[bin]]
name = "signer-server"
path = "src/signer/server.rs"

[dependencies]
config = { version = "0.10", features = ["json"] }
tonic = { version = "0.3", features = ["transport", "tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
itertools = "0.9"
futures = "0.3"
clap = "2.33"
simple_logger = "1.11"
log = "0.4"
ed25519-zebra = "2"
async-std = { version = "1.8.0", features = ["std"] }

[build-dependencies]
tonic-build = "0.3"
